[package]
name = "bitgrid"
version = "0.1.0"
edition = "2021"
authors = ["dlamei"]
description = "A compact, efficient bit grid structure"
license = "MIT"
repository = "https://github.com/dlamei/bitgrid"
readme = "README.md"
keywords = ["bitset", "bitmap", "sparse", "grid"]
categories = ["data-structures", "no-std"]


[features]
default = []
std = []
